--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.villanianalytics.unsql</groupId>
 	<artifactId>unsql</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 
 	<name>UnSql</name>
 	<description>A Java utility to run SQL on unstructed file structures</description>
+	<url></url>
 	<packaging>jar</packaging>
 
 	<licenses>
@@ -19,6 +20,26 @@
 			<comments>A business-friendly OSS license</comments>
 		</license>
 	</licenses>
+	
+	<scm>
+		<connection>scm:git:git@github.com:villanianalytics/unSQL.git</connection>
+		<developerConnection>scm:git:git@github.com:villanianalytics/unSQL.git</developerConnection>
+		<url>git@github.com:villanianalytics/unSQL.git</url>
+		<tag>HEAD</tag>
+	</scm>
+	
+	<developers>
+		<developer>
+			<id>pmpfl</id>
+			<name>Pedro Lopes</name>
+			<email>pedrompflopes@gmail.com</email>
+		</developer>
+		<developer>
+			<id>villanianalytics</id>
+			<name>Daniel A Villani</name>
+			<email>dvillani@villytics.com</email>
+		</developer>
+	</developers>
 
 	<distributionManagement>
 		<snapshotRepository>
