--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -5,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.villanianalytics.unsql</groupId>
 	<artifactId>unsql</artifactId>
-	<version>0.0.3T</version>
+	<version>0.0.7</version>
 
 	<name>UnSql</name>
 	<description>A Java utility to run SQL on unstructed file structures</description>
